# data-lineage-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  entrypoints_and_services.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
dashboards/: pipeline-dashboard.json
data/: demo_lineage_output.csv  output.csv  sample_input.csv  sample_output.csv  test_output.csv  ui_demo_output.csv
docker/: otel-collector-config.yaml
docker/clickhouse/: init.sql
docker/grafana/: datasources.yml
docker/marquez/: marquez.yml
docs/: architecture.md
scripts/: start.sh  test_pipeline.py
sdk/: README.md  pyproject.toml  setup.py
sdk/data_lineage_hub_sdk/: __init__.py  cli.py  client.py  config.py  decorators.py  models.py
sdk/examples/: basic_usage.py  ml_pipeline.py
sdk/tests/: __init__.py  test_client.py  test_config.py  test_decorators.py
src/: config.py  main.py
src/api/: middleware.py  models.py  routes.py
src/consumers/: lineage_consumer.py  otel_consumer.py
src/examples/: README.md  basic_usage.py  ml_pipeline.py  pipeline_executor_example.py  pipeline_stages_example.py  simple_lineage_example.py  telemetry_example.py
src/pipeline/: executor.py  stages.py
src/sdk/: __init__.py  cli.py  client.py  config.py  decorators.py  models.py  types.py
src/services/: namespace.py
src/utils/: clickhouse_client.py  kafka_client.py  logging_config.py  openlineage_client.py  otel_config.py
tests/sdk/: __init__.py  test_client.py  test_config.py  test_decorators.py
